syntax = "proto3";
package vpower;
option go_package = "github.com/beatoz/beatoz-go/ctrlers/vpower";

message delegatee_proto {
  bytes pub_key = 1;
  int64 power = 2;
}